# cpsumon

./: .gitignore  CMakeLists.txt  cpsufancli.c  cpsumoncli.c
include/: cpsumoncli.h
libcpsumon/: CMakeLists.txt
libcpsumon/include/: cpsumon.h  dongle.h  psu.h
libcpsumon/src/: cpsumon.c  dongle.c  psu.c
